	  implementation of JACKClient sometimes hasn't had initialised yet. The new implementation
	  activates the JACK client in a separate step, when the initialisation is complete. (#106)
	* Added a couple of spin boxes into the synth properties dialog to allow for finer control over
	  the synth output gain factors. (#104)

2022-08-03:

	1.11.1 released.

	* Fixed compilation on macOS with SDK versions prior to 12.0. (#96)

2022-07-23:

	1.11.0 released.

	* Updated mt32emu library to version 2.7.0.
	* Updated for compatibility with the Qt framework versions 6.0 and above.
	* Added possibility to view timbre banks and select a desired instrument on each voice part.
	  The timbres are shown in a popup menu split by their "sound groups" which is displayed
	  when the user clicks on the instrument name set on the related part in the Channel Status
	  pane. (#70)
	* Added submenu "Play Demo Songs" to the "Tools" menu. When a Synth profile exists that
	  refers to one of the new-gen MT-32 ROMs, the list of demo songs contained within is shown,
	  yet a few of special items to facilitate playback control. (#84)
	* Fixed a few problems with management of the Floating Display on multi-screen systems.
	  When the application is restarted, the position of the floating window should now be
	  restored on the same screen where it was previously. Also, the window geometry is now
	  adjusted to fit into the screen when the display it is show on is switched off, and each
	  time the floating window shows up. (#94)
	* Extended the command-line interface to provide for opening one or more MIDI port(s)
	  at startup. The command "connect_midi" can be used to create ports using the system MIDI
	  driver. By using the options "jack_midi_clients" and "jack_sync_clients", JACK MIDI ports
	  can be created as long as the JACK support is compiled in. (#95)

2022-03-06:

	1.10.0 released.

	* Updated mt32emu library to version 2.6.0.