@@ -3,6 +3,6 @@ set(mt32emu_qt_URL "http://munt.sourceforge.net/")
 set(mt32emu_qt_CONTACT "sergm@muntemu.org")
 
 set(mt32emu_qt_VERSION_MAJOR 1)
-set(mt32emu_qt_VERSION_MINOR 11)
-set(mt32emu_qt_VERSION_PATCH 1)
+set(mt32emu_qt_VERSION_MINOR 12)
+set(mt32emu_qt_VERSION_PATCH 0)
 set(mt32emu_qt_VERSION "${mt32emu_qt_VERSION_MAJOR}.${mt32emu_qt_VERSION_MINOR}.${mt32emu_qt_VERSION_PATCH}")
