@@ -12,6 +12,8 @@ HEAD:
 	  activates the JACK client in a separate step, when the initialisation is complete. (#106)
 	* Added a couple of spin boxes into the synth properties dialog to allow for finer control over
 	  the synth output gain factors. (#104)
+	* Re-arranged the synth state panel and added a partial usage indicator alongside the
+	  existing MIDI MESSAGE LED. (#112)
 
 2022-08-03:
 
